@@ -6,6 +6,7 @@
 	* Fix for uninitialised version_number in ATSC EIS parser (LP: #509515)
 	* Fix for inefficient polling of EPG data (LP: #509091)
 	* Default demuxer timeout set to 5 seconds
+	* Using XK_Control rather than XK_Shift
 
 2010-01-17  Michael Lamothe <michael.lamothe@gmail.com>
 
